[package]
name = "agency"
version = "0.2.0"
authors = ["James Birtles <james@birtles.dev>"]
edition = "2018"
license = "MIT"
description = "A small async actor framework"
repository = "https://github.com/AircastDev/agency"
readme = "README.md"
exclude = [
    ".devcontainer/*",
    ".gitignore",
]

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
async_nursery = "0.3"
async_executors = { version = "0.4", features = ["tokio_tp"] }
