[package]
name = "agency"
version = "0.3.0"
authors = ["James Birtles <james@birtles.dev>"]
edition = "2018"
license = "MIT"
description = "A small async actor framework"
repository = "https://github.com/AircastDev/agency"
readme = "README.md"
exclude = [
    ".devcontainer/*",
    ".gitignore",
]

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
