[package]
name = "agency"
version = "0.6.0"
authors = ["James Birtles <james@birtles.dev>"]
edition = "2018"
license = "MIT"
description = "A small async actor framework"
repository = "https://github.com/AircastDev/agency"
readme = "README.md"
exclude = [
    ".devcontainer/*",
    ".gitignore",
]

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
uuid = { version = "1.2", features = ["v4"] }
dyn-clone = "1"
tokio-stream = "0.1"
